src/test/deca/syntax/invalid/mauvais_while_4.deca
// Description:
//    mauvaise utilisation du while: deuxième crochet manquant
//
// Resultats:
// ligne 10: "missing '}' at 'x'"


{
	int x = 0;
	while (x > 2) {
	      x = x+1;
				println(x);
	      
	  println("je suis au bout");    
}
